Added implementation